# enteros-hermes-platform-a2a

./: .gitignore  README.md  pyproject.toml
.gitea/workflows/: ci.yml  minimal-ci.yml
hermes_platform_molecule_a2a/: __init__.py  adapter.py  delegation_tools.py
scripts/: e2e_real_hermes_subprocess.py  e2e_validate.py
tests/: conftest.py  test_adapter.py  test_delegation_tools.py
